test/fixtures/public/fail/semantic/bool_op_incomp.jmm
/*  REASON:
    Boolean operation with non booleans

    ESTE TESTE FOI FEITO PELO NUNO
*/

class T {
    public static void main(String[] s) {
          int a;
          int b;
          boolean c;

          c = a && this.foo();
          c = !b < c;
          c = !this.foo();
    }

    public int foo(){
        int aux;
        aux=1;
        return aux;
    }

}